--- a/02/Hausaufgabe Load Audio | Generate 3 Sine Tones.ipynb
+++ b/02/Hausaufgabe Load Audio | Generate 3 Sine Tones.ipynb
@@ -105,6 +105,44 @@
    "source": [
     "Et voilà :)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# \"Melodie\" generieren"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generiert eine \"Melodie\":\n",
+    "\n",
+    "- Sie soll aus mindestens drei (Sinus-)Tönen bestehen.\n",
+    "- Die drei Töne sollen hintereinander kommen (also einstimmig, nicht mehrstimmig).\n",
+    "\n",
+    "Tipps:\n",
+    "\n",
+    "- Wir haben in der gemeinsamen Sitzung gesehen, wie man Sinustöne in einen Array schreibt ( / generiert).\n",
+    "- `np.append` könnte nützlich sein."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import IPython.display as ipd\n",
+    "\n",
+    "sample_rate = ...\n",
+    "...\n",
+    "...\n",
+    "\n",
+    "ipd.Audio(melody, rate=sample_rate)"
+   ]
   }
  ],
  "metadata": {
